# nexucrm

./: .dockerignore  .env.example  .env.example.production  .env.production  .env.production.docker  .env.production.example  .env.security.example  .flake8  .gitignore  .pre-commit-config.yaml  .rebuild-timestamp  .vexus_smoke.txt  .vexus_smoke2.txt  .vexus_smoke3.txt  ABRIR_TELAS_AGORA.txt  ADMIN_DASHBOARD_ENTREGA.txt  ADMIN_DASHBOARD_INDICE.txt  ADMIN_DASHBOARD_README.txt  ADMIN_DASHBOARD_RESUMO.txt  ANALISE_MELHORIAS_SISTEMA.md  ATIVAR_AGORA.txt  AUDITORIA_COMPLETA.txt  BUILD_VERSION.txt  CHECKLIST_ENTREGA_FINAL.txt  CHECKLIST_EXECUTION_ONECLICK.md  CHECKLIST_VIAGEM_CAMPOS.py  COMECE_AQUI.txt  COMECE_AQUI_WHATSAPP.txt  COMPLETE_35_PERCENT.md  COMPLETE_FLOW_TEST.py  COMPLETE_FLOW_VALIDATION.md  COMPLETE_VERIFICATION_REPORT.md  CONCLUSÃO_IMPLEMENTAÇÃO.py  CRM_API_DOCUMENTATION.txt  DEBUG_BOTOES_CADASTRO.md  DELIVERY_ADMIN_DASHBOARD.txt  DELIVERY_INTEGRACIONES_UI.md  DELIVERY_PLAN_4_BLOQUEADORES.py  DELIVERY_SUMMARY.txt  DELIVERY_SUMMARY_UI_ONECLICK.md  (+250 more)
.do/: app.yaml
app/: __init__.py  api_main.py  db_users.py
c_modules/: ctypes_example.py  fuzzy_cython.c  fuzzy_cython.pyx  fuzzy_logic.c  fuzzy_logic.h  setup.py  setup_cython.py  setup_new.py  weight_adjustment.c  weight_adjustment.h  weight_adjustment.pyx
deploy/: README_deploy.md  nginx_vexus.conf  run_deploy_server.sh  systemd_vexus_api.service  systemd_vexus_worker.service
docs/: DATABASE_MIGRATIONS.md  DEPLOYMENT_GUIDE.md  PERFORMANCE_OPTIMIZATION.md  SECURITY_HARDENING.md  SLA_MONITORING.md  STAGING_ENVIRONMENT.md
frontend/: App.jsx  analytics-dashboard.html  app.html  automations.html  contact.html  contacts.html  dashboard-functional.html  dashboard-jwt.html  dashboard.html  forgot-password.html  home.html  import.html  inbox-nexus.html  index.html  integrations-oneclick.html  kpi-dashboard.html  login.html  (+21 more)
(+201 files in other folders)
