[project]
name = "vexus-service"
version = "0.1.0"
description = "Vexus Service - Plataforma completa de automação para SaaS"
authors = [{name = "Victors Team", email = "victor@vexus.com"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
"fastapi>=0.104.0",
"uvicorn[standard]>=0.24.0",
"pydantic>=2.0.0",
"pydantic-settings>=2.0.0",
"python-jose[cryptography]>=3.3.0",
"passlib[bcrypt]>=1.7.4",
"python-multipart>=0.0.6",
"httpx>=0.25.0",
"requests>=2.31.0",
"python-dotenv>=1.0.0",
"email-validator>=2.1.0",
]

[project.optional-dependencies]
dev = [
"pytest>=7.4.0",
"pytest-cov>=4.1.0",
"pytest-asyncio>=0.21.0",
"pytest-mock>=3.11.0",
"black>=23.11.0",
"flake8>=6.1.0",
"mypy>=1.7.0",
"isort>=5.12.0",
"pre-commit>=3.5.0",
"httpx>=0.25.0",
"faker>=20.0.0",
"factory-boy>=3.3.0",
"coverage>=7.3.0",
"pytest-html>=4.0.0",
"pytest-xdist>=3.5.0",
"cython>=0.29.0",  # necessário para compilação de módulos C
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
/(
\.eggs
| \.git
| \.hg
| \.mypy_cache
| \.tox
| \.venv
| _build
| buck-out
| build
| dist
| docs
)/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
exclude = [
'migrations/',
'.venv/',
'venv/',
'.tox/',
'tests/fixtures/',
]